--- a/TrafficSignClassifier.ipynb
+++ b/TrafficSignClassifier.ipynb
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x128f64748>"
+       "<matplotlib.image.AxesImage at 0x127bca710>"
       ]
      },
      "execution_count": 3,
@@ -213,14 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "\n",
-    "EPOCHS = 10\n",
-    "BATCH_SIZE = 128"
+    "EPOCHS = 12\n",
+    "BATCH_SIZE = 256"
    ]
   },
   {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,13 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TRAIN\n",
     "\n",
-    "rate = 0.001\n",
+    "rate = 0.009\n",
     "\n",
     "logits = LeNets_Child(x)\n",
     "\n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -391,34 +391,40 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.739\n",
+      "Validation Accuracy = 0.890\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.846\n",
+      "Validation Accuracy = 0.915\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.894\n",
+      "Validation Accuracy = 0.924\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.907\n",
+      "Validation Accuracy = 0.922\n",
       "\n",
       "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.902\n",
+      "Validation Accuracy = 0.918\n",
       "\n",
       "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.927\n",
+      "Validation Accuracy = 0.937\n",
       "\n",
       "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.913\n",
+      "Validation Accuracy = 0.932\n",
       "\n",
       "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.904\n",
+      "Validation Accuracy = 0.914\n",
       "\n",
       "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.908\n",
+      "Validation Accuracy = 0.932\n",
       "\n",
       "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.924\n",
+      "Validation Accuracy = 0.929\n",
+      "\n",
+      "EPOCH 11 ...\n",
+      "Validation Accuracy = 0.918\n",
+      "\n",
+      "EPOCH 12 ...\n",
+      "Validation Accuracy = 0.931\n",
       "\n",
       "Model saved\n"
      ]
@@ -469,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
@@ -512,14 +518,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy = 0.909\n"
+      "Test Accuracy = 0.905\n"
      ]
     }
    ],
@@ -541,8 +547,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -610,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -668,37 +676,37 @@
       "Guess: 1\n",
       "\n",
       "PROBABILITIES\n",
-      "Sign 1 -> 0.999\n",
-      "Sign 0 -> 0.001\n",
-      "Sign 31 -> 0.001\n",
-      "Sign 40 -> 0.000\n",
+      "Sign 1 -> 1.000\n",
+      "Sign 11 -> 0.000\n",
+      "Sign 29 -> 0.000\n",
+      "Sign 38 -> 0.000\n",
       "Sign 2 -> 0.000\n",
       "\n",
       "********************************************\n",
       "PIC #2\n",
       "********************************************\n",
       "Correct: 38\n",
-      "Guess: 12\n",
+      "Guess: 9\n",
       "\n",
       "PROBABILITIES\n",
-      "Sign 12 -> 0.995\n",
-      "Sign 9 -> 0.005\n",
+      "Sign 9 -> 0.770\n",
+      "Sign 12 -> 0.230\n",
       "Sign 23 -> 0.000\n",
-      "Sign 16 -> 0.000\n",
-      "Sign 10 -> 0.000\n",
+      "Sign 40 -> 0.000\n",
+      "Sign 11 -> 0.000\n",
       "\n",
       "********************************************\n",
       "PIC #3\n",
       "********************************************\n",
       "Correct: 9\n",
-      "Guess: 37\n",
+      "Guess: 40\n",
       "\n",
       "PROBABILITIES\n",
-      "Sign 37 -> 0.969\n",
-      "Sign 40 -> 0.025\n",
-      "Sign 26 -> 0.006\n",
-      "Sign 12 -> 0.000\n",
-      "Sign 24 -> 0.000\n",
+      "Sign 40 -> 0.995\n",
+      "Sign 23 -> 0.004\n",
+      "Sign 37 -> 0.000\n",
+      "Sign 26 -> 0.000\n",
+      "Sign 18 -> 0.000\n",
       "\n",
       "********************************************\n",
       "PIC #4\n",
@@ -708,10 +716,10 @@
       "\n",
       "PROBABILITIES\n",
       "Sign 25 -> 1.000\n",
-      "Sign 11 -> 0.000\n",
-      "Sign 19 -> 0.000\n",
+      "Sign 29 -> 0.000\n",
+      "Sign 31 -> 0.000\n",
       "Sign 21 -> 0.000\n",
-      "Sign 1 -> 0.000\n",
+      "Sign 30 -> 0.000\n",
       "\n",
       "********************************************\n",
       "PIC #5\n",
@@ -722,9 +730,9 @@
       "PROBABILITIES\n",
       "Sign 17 -> 1.000\n",
       "Sign 14 -> 0.000\n",
-      "Sign 12 -> 0.000\n",
-      "Sign 9 -> 0.000\n",
-      "Sign 0 -> 0.000\n",
+      "Sign 33 -> 0.000\n",
+      "Sign 32 -> 0.000\n",
+      "Sign 30 -> 0.000\n",
       "\n"
      ]
     }
